@@ -698,7 +698,6 @@ void ST_Ticker(void)
   st_oldhealth = plyr->health;
 }
 
-//e6y static 
 int st_palette = 0;
 
 void ST_doPaletteStuff(void)
